--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "bin": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest"
   },
   "author": "Andrei Dobrinski <dobrinski.andrei@gmail.com>",
   "license": "ISC",
@@ -22,7 +22,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "cli-testing-library": "^2.0.2",
     "eslint": "^9.9.0",
-    "globals": "^15.9.0"
+    "globals": "^15.9.0",
+    "vitest": "^2.0.5"
   }
 }
