--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@inquirer/prompts": "^5.3.8",
     "lodash.kebabcase": "^4.1.1",
+    "validator": "^13.12.0",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
